# PolarProject

./: .coderabbit.yaml  .gitignore  ASW28polar_Plotly.py  Procfile  RAILWAY.md  README.md  glider.py  polar.py  polar_calc.py  polar_ui.py  pyproject.toml  requirements.txt  server_list.csv  test_glider.py  test_glider_additional.py  test_polar_ui.py  units.py
.github/: copilot-instructions.md
PolarProject.egg-info/: PKG-INFO  SOURCES.txt
assets/: style.css
datafiles/: ASK 21.csv  ASK 21.json  ASW 28.csv  ASW 28.json  Duo Discus T.csv  Duo Discus T.json  Genesis 2.csv  JS3 JET 15m.csv  JS3 JET.csv  SGS 1-26E.csv  SGS 1-35C.csv  SGS 2-33B.csv  Ventus 2cT.csv  gliderInfo.json
digitized polar curves/: ASW 28 polar 2 wpd_project.tar  JS3 15-18 wpd_project.tar  JS3 wpd_project.tar  SGS 1-26E wpd_project.tar  SGS 1-34C project.tar  SGS 2-33 copy 2 wpd_project.tar  SGS 2-33 wpd_project.tar  Ventus 2cT wpd_project.tar
