[project]
name = "PolarProject"
version = "0.1.0"
description = "Displays performance charts derived from a glider's polar curve"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blinker==1.9.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "dash==3.3.0",
    "dash-bootstrap-components==2.0.4",
    "dash_ag_grid==32.3.4",
    "et_xmlfile==2.0.0",
    "Flask==3.1.2",
    "flexcache==0.3",
    "flexparser==0.4",
    "gunicorn==23.0.0",
    "idna==3.11",
    "importlib_metadata==8.7.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "nest-asyncio==1.6.0",
    "numpy==2.4.1",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "Pint==0.25.2",
    "Pint-Pandas==0.7.1",
    "platformdirs==4.5.1",
    "plotly==6.5.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "retrying==1.4.2",
    "scipy==1.17.0",
    "setuptools==80.9.0",
    "six==1.17.0",
    "typing_extensions==4.15.0",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "Werkzeug==3.1.5",
    "zipp==3.23.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
